deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: load-arena
  labels:
    name: load-arena
